Refactor and implement methods dtos and services for connecting external service to manage AI communication